fix dataset name && align home text

--- a/src/app-home.less
+++ b/src/app-home.less
@@ -10,6 +10,7 @@
             font-size: 20px;
             margin: 30px 0;
             max-width: 720px;
+            text-align: justify;
         }
     }
     .btn-group {
