--- a/src/app-leaderboard.less
+++ b/src/app-leaderboard.less
@@ -16,12 +16,12 @@
     }
     .summary-header {
         font-weight: 500;
-        // &.model {
-        //     color: #10239e;
-        // }
-        // &.attack {
-        //     color: #a8071a;
-        // }
+        &.model {
+            color: #10239e;
+        }
+        &.attack {
+            color: #a8071a;
+        }
     }
     .compare-btn {
         &:hover {
@@ -63,6 +63,7 @@
         background: #000000a0;
         display: flex;
         flex-direction: column;
+        padding: 30px;
         &::before {
             content: "";
             height: 100%;
@@ -76,6 +77,13 @@
             bottom: 50px;
             right: 50px;
             z-index: 1000;
+        }
+        .holder {
+            position: absolute;
+            left: 0;
+            top: 0;
+            width: 100%;
+            height: 100%;
         }
     }
     .notes {
